# nonlin

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  annotated.html  copilot_example.f90  dir_68267d1309a1af8e8297ef4c3efbcdba.js  docs.md  doxygen_crawl.html  error_log.txt  files.html  fpm.toml  functions_func.html  functions_vars.html  index.html  inherit_graph_0.dot  inherit_graph_12.dot  inherit_graph_13.dot  inherit_graph_18.md5  inherit_graph_7.md5  inherit_graph_9.dot  inherit_graph_9.md5  interfacenonlin__c__api_1_1c__jacobianfcn.html  interfacenonlin__core_1_1fcn1var-members.html  interfacenonlin__core_1_1fcn1var.html  interfacenonlin__core_1_1fcnnvar-members.html  interfacenonlin__core_1_1gradientfcn.html  interfacenonlin__core_1_1jacobianfcn.html  interfacenonlin__core_1_1nonlin__optimize__fcn.html  interfacenonlin__core_1_1nonlin__solver.html  interfacenonlin__core_1_1nonlin__solver__1var.html  interfacenonlin__core_1_1vecfcn-members.html  interfacenonlin__core_1_1vecfcn.html  interfacenonlin__core_1_1vecfcn.js  interfacenonlin__polynomials_1_1assignment_07_0A_08.js  interfacenonlin__polynomials_1_1operator_07_09_08-members.html  interfacenonlin__polynomials_1_1operator_07_09_08.html  interfacenonlin__polynomials_1_1operator_07_5_08.html  interfacenonlin__types_1_1fcn1var-members.html  (+66 more)
.github/workflows/: cmake.yml  doc-deployment.yml  doxygen-gh-pages.yml  fpm.yml
cmake/: helper.cmake
configure/: CMakeLists.txt  template.cmake  template.pc
dependencies/: CMakeLists.txt
dependencies/BLAS/: CMakeLists.txt
dependencies/LAPACK/: CMakeLists.txt
dependencies/ferror/: CMakeLists.txt
dependencies/linalg/: CMakeLists.txt
doc/: Doxyfile  index.html  search.html
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_16.dot  inherit_graph_16.md5  inherit_graph_17.dot  inherit_graph_2.md5  inherit_graph_4.dot  inherit_graph_5.dot  inherit_graph_5.md5  inherit_graph_6.dot  inherit_graph_8.dot  interfacenonlin__c__api_1_1c__fcnnvar-members.html  interfacenonlin__c__api_1_1c__fcnnvar.html  interfacenonlin__c__api_1_1c__fcnnvar.js  interfacenonlin__c__api_1_1c__gradientfcn-members.html  interfacenonlin__c__api_1_1c__jacobianfcn.js  interfacenonlin__c__api_1_1c__vecfcn-members.html  interfacenonlin__core_1_1fcn1var-members.html  interfacenonlin__core_1_1fcn1var.html  interfacenonlin__core_1_1fcnnvar-members.html  interfacenonlin__core_1_1fcnnvar.html  interfacenonlin__core_1_1gradientfcn-members.html  interfacenonlin__core_1_1gradientfcn.html  interfacenonlin__core_1_1jacobianfcn-members.html  interfacenonlin__core_1_1jacobianfcn.html  interfacenonlin__core_1_1jacobianfcn.js  interfacenonlin__core_1_1nonlin__optimize__fcn-members.html  (+157 more)
doc/interface/: assignment(=).html  fcn1var.html  fcnnvar.html  gradientfcn.html  jacobianfcn.html  nonlin_optimize_fcn.html  nonlin_solver.html  nonlin_solver_1var.html  operator(+).html  operator(-).html  operator(ASTERISK).html  vecfcn.html  (+1 more)
docs/: Doxyfile
examples/: CMakeLists.txt  example_problems.f90  nonlin_bfgs_c_example.c  nonlin_bfgs_example.f90  nonlin_brent_example.f90  nonlin_c_bfgs_example.c  nonlin_c_brent_1d_example.c  nonlin_c_least_squares_example.c  nonlin_c_nelder_mead_example.c  nonlin_c_newton_1d_example.c  nonlin_c_newton_example.c  nonlin_c_polynomial_example.c  nonlin_c_quasi_newton_example.c  nonlin_least_squares_example.f90  nonlin_newton1d_example.f90  nonlin_newton_example.f90  nonlin_newton_example_2.f90  nonlin_newton_solve_jacobian.f90  nonlin_nm_opt_example.f90  nonlin_poly_fit_example.f90  nonlin_poly_roots_example.f90  nonlin_quasi_newton_c_example.c  nonlin_quasi_newton_example.f90
include/: nonlin.h
install/: nonlinConfig.cmake.in  template.pc
interface/: assignment(=).html  gradientfcn.html  jacobianfcn.html  nonlin_solver_1var.html  operator(-).html  operator(ASTERISK).html
lists/: files.html  types.html
module/: nonlin.html  nonlin_error_handling.html  nonlin_linesearch.html  nonlin_multi_var.html  nonlin_polynomials.html  nonlin_types.html
proc/: print_status.html  test_convergence.html
search/: all_5.js  all_6.js  all_c.js  all_f.js  classes_5.js  classes_7.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  variables_4.js  variables_5.js  variables_6.js
sourcefile/: nonlin.f90.html  nonlin_multi_eqn_mult_var.f90.html  nonlin_multi_var.f90.html  nonlin_types.f90.html
src/: CMakeLists.txt  nonlin.f90  nonlin_c_api.f90  nonlin_c_binding.f90  nonlin_constants.f90  nonlin_core.f90  nonlin_equation_optimizer.f90  nonlin_equation_solver.f90  nonlin_equation_solver_1var.f90  nonlin_error_handling.f90  nonlin_fcn1var_helper.f90  nonlin_fcnnvar_helper.f90  nonlin_least_squares.f90  nonlin_linesearch.f90  nonlin_multi_eqn_mult_var.f90  nonlin_multi_var.f90  nonlin_optimize.f90  nonlin_optimize_bfgs.f90  nonlin_optimize_line_search.f90  nonlin_optimize_nelder_mead.f90  nonlin_polynomials.f90  nonlin_single_var.f90  nonlin_solve.f90  nonlin_solve_brent.f90  nonlin_solve_line_search.f90  nonlin_solve_newton.f90  nonlin_solve_newton1var.f90  nonlin_solve_quasi_newton.f90  nonlin_types.f90  nonlin_vecfcn_helper.f90
tests/: CMakeLists.txt  nonlin_c_test.c  nonlin_c_test.h  nonlin_c_test_poly.c  nonlin_c_test_solve.c  nonlin_test.f90  nonlin_test_jacobian.f90  nonlin_test_optimize.f90  nonlin_test_poly.f90  nonlin_test_quasinewton.f90  nonlin_test_solve.f90  powell_badly_scaled.f90  test_jacobian.f90
tests/fortran_test_helper/: CMakeLists.txt
type/: bfgs.html  brent_solver.html  constrained_least_squares_solver.html  equation_solver.html  fcn1var_helper.html  fcnnvar_helper.html  least_squares_solver.html  line_search.html  nelder_mead.html  newton_solver.html  polynomial.html  vecfcn_helper.html
(+416 files in other folders)
